--- a/lesson_10_multiple_figures.html
+++ b/lesson_10_multiple_figures.html
@@ -1499,7 +1499,7 @@
             <nav class="lesson-nav" aria-label="Lesson Navigation">
                 <a href="lesson_09_props_scenes.html" class="prev-lesson">← Previous: Working with Props and Building Scenes</a>
                 <a href="index.html" class="home-link">🏠 Course Home</a>
-                <a href="lesson_11_lighting_basics.html" class="next-lesson">Next: Lighting Basics →</a>
+                <a href="lesson_11_scene_composition.html" class="next-lesson">Next: Scene Composition and Visual Storytelling →</a>
             </nav>
         </div>
     </main>
